<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/heroes"
            android:icon="@drawable/superhero"
            android:title="@string/heroes_zeroes" />
        <item
            android:id="@+id/data"
            android:icon="@drawable/calculator"
            android:title="@string/converter" />
        <item
            android:id="@+id/alert"
            android:icon="@drawable/alarm"
            android:title="@string/alarm" />


    </group>

    <item android:title="@string/comunicado">
        <menu>
            <item
                android:id="@+id/info"
                android:icon="@drawable/head"
                android:title="@string/info" />
        </menu>
    </item>

</menu>
